refactor product, forget producent add type
