# internal/application/api/request/product.go
@@ -1,6 +1,6 @@
 package request
 
 type ProductRequest struct {
-	Name     string `json:"name"`
-	Producer string `json:"producer"`
+	Name string `json:"name"`
+	Type string `json:"type"`
 }
