# internal/application/api/response/product.go
@@ -1,7 +1,7 @@
 package response
 
 type ProductResponse struct {
-	Id       string `json:"id"`
-	Name     string `json:"name"`
-	Producer string `json:"producer"`
+	Id   string `json:"id"`
+	Name string `json:"name"`
+	Type string `json:"type"`
 }
